--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -390,8 +390,8 @@ img {
 }
 
 hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border: 0;
     border-top: 1px solid darkkhaki;
 }
@@ -1820,6 +1820,13 @@ label {
     display: inline-block;
     margin-bottom: 5px;
     font-weight: bold;
+}
+label.baslik{
+	background-color: transparent;
+}
+label.form-baslik{
+	color: #99925C;
+	font-weight: bold;
 }
 
 input[type="search"] {
