--- a/WebContent/css/signin.css
+++ b/WebContent/css/signin.css
@@ -1,50 +1,50 @@
 body {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    /*background-color: #E9E8DB;*/
+	padding-top: 20px;
+	padding-bottom: 20px;
+	/*background-color: #E9E8DB;*/
 }
 
 .form-signin {
-    max-width: 300px;
-    padding: 20px;
-    margin: 0 auto;
+	max-width: 300px;
+	padding: 20px;
+	margin: 0 auto;
 }
 
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .form-signin .form-control {
-    position: relative;
-    font-size: 13px;
-    height: auto;
-    padding: 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+	position: relative;
+	font-size: 13px;
+	height: auto;
+	padding: 10px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .form-signin .form-control:focus {
-    z-index: 2;
+	z-index: 2;
 }
 
 .form-signin input[type="text"] {
-    margin-bottom: 0;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+	margin-bottom: 0;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
 }
 
 .form-signin input[type="password"] {
-    margin-bottom: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+	margin-bottom: 0;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
 
 .color-yesil {
-    color: #5fb336;
+	color: #5fb336;
 }
 
-.color-darkkhaki {
-    color: darkkhaki;
+.color-chocolate {
+	color: chocolate;
 }
