--- a/WebContent/css/fonts.css
+++ b/WebContent/css/fonts.css
@@ -2,23 +2,23 @@
   font-family: 'Dosis';
   font-style: normal;
   font-weight: 300;
-  src: local('Dosis Light'), local('Dosis-Light'), url(fonts/Dosis-Light.woff) format('woff');
+  src: local('Dosis Light'), local('Dosis-Light'), url(/fonts/Dosis-Light.woff) format('woff');
 }
 @font-face {
   font-family: 'Dosis';
   font-style: normal;
   font-weight: 400;
-  src: local('Dosis Regular'), local('Dosis-Regular'), url(fonts/Dosis-Regular.woff) format('woff');
+  src: local('Dosis Regular'), local('Dosis-Regular'), url(/fonts/Dosis-Regular.woff) format('woff');
 }
 @font-face {
   font-family: 'Dosis';
   font-style: normal;
   font-weight: 500;
-  src: local('Dosis Medium'), local('Dosis-Medium'), url(fonts/Dosis-Medium.woff) format('woff');
+  src: local('Dosis Medium'), local('Dosis-Medium'), url(/fonts/Dosis-Medium.woff) format('woff');
 }
 @font-face {
   font-family: 'Dosis';
   font-style: normal;
   font-weight: 600;
-  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(fonts/Dosis-SemiBold.woff) format('woff');
+  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(/fonts/Dosis-SemiBold.woff) format('woff');
 }
